# C-17-STL-Cookbook

./: .gitignore  CMakeLists.txt  cities.txt  main.cc
iterators/: checked_iterators.h  iterable_range.h  iterator_adapters.h  iterator_algorithms.h  iterator_categories.h  iterator_sentinels.h  reverse_iterator_adapters.h  zip_iterator.h
lambda_expressions/: cartesian_product.h  complex_predicates.h  defining_lambdas.h  function_concatenation.h  multifunction_calling.h  transform_if.h  wrapping_lambdas.h
stl_algorithms/: copying_items.h  dictionary_merging.h  finding_items.h  generating_permutations.h  limiting_values_to_range.h  locating_patterns_in_strings.h  removing_specific_items.h  sampling_large_vectors.h  sorting_containers.h  transforming_contents.h
stl_algorithms_advanced/: ascii_mandelbrot_renderer.h  compressing_decompressing_strings.h  fourier_transform.h  gather.h  implementing_trie.h  removing_consecutive_whitespace.h  search_input_suggestion.h  split.h  vector_error_sum.h
stl_containers/: efficiently_modifying_map.h  effiiently_modifying_map.h  filtering_duplicates.h  inserting_into_map.h  keep_vector_sorted.h  map_insertion_hint_semantics.h  personal_todo_list.h  rpn_calculator.h  unordered_map_with_custom_types.h  vector_access.h  word_frequency_counter.h  writing_style_helper.h
strings/: comfort_without_constructing.h  counting_words.h  create_concatenate_transform.h  formatting_output.h  initializing_objects_from_input.h  reading_from_input.h  trim_whitespace.h
utility_classes/: legacy_apis_with_smart_pointers.h  replacing_void_ptr_with_std_any.h  shared_ptr.h  storing_different_types_with_std_variant.h  unique_ptr.h  weak_ptr.h
